2007-03-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.91.3 ===

2007-03-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* Makefile.am (EXTRA_DIST): Remove forgotten NEWS.pixbuf
	* src/Makefile.am (EXTRA_DIST): Remove forgotten README.pixbuf and
	README.server

2007-03-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (maybe_check_submenu_state, draw_box):
	Support active/passive focus on GtkMenuItems, use passive focus when
	the focus is in an item in a submenu.
	* README: add GtkMenuItem notes
	
2007-03-09  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* AUTHORS
	* NEWS.pixbuf
	* src/ChangeLog
	* src/README.pixbuf
	* src/README.server: clean up and remove obsolete documentation
	* HACKING: add documentation about the internals

2007-03-08  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* README: replace with more detailed and relevant information

2007-02-20  Xan Lopez  <xan.lopez@nokia.com>

	* sapwood-draw.c (draw_option, draw_check):
	Add special casing for GtkCheckButton and GtkRadioButton to use
	the correct graphics in the theme when the widgets have focus.

2007-02-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* === Release 2.91.2 ===

2007-02-06  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_simple_image, get_window_for_shape): Check
	the paintable area size and apply the shape mask only when painting
	the whole window to avoid another case of infinite expose loop.

2007-01-31  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* src/sapwood-draw.c (draw_expander): Added to handle painting
	GtkExpander and treeview row expanders. Reuses arrow theming rules for
	simplicity.

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>
	
	* === Release 2.91.1 ===

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>

	* demos/treeview.gtkrc: Simplify treeview theming example using
	wildcards

2007-01-29  Tommi Komulainen  <tommi.komulainen@nokia.com>
