@@ -1,3 +1,11 @@
+2007-04-02  Tommi Komulainen  <tommi.komulainen@nokia.com>
+
+	* src/sapwood-draw.c (maybe_check_button_position): rename to
+	check_child_position and generalize to handle a list of widgets.
+	(check_buttonbox_child_position): new function to get the list of
+	child widgets from buttonbox
+	(draw_simple_image): adapt to use the new function 
+
 2007-03-29  Tommi Komulainen  <tommi.komulainen@nokia.com>
 
 	* === Release 2.91.3 ===
